Fixed bug #45742 (Wrong class array inpretetion using constant indexes)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@264373 c90b9560-bf6c-de11-be94-00142212c4b1